# ckpg

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml
ckptguard/: __main__.py  cli.py  errors.py  models.py  numeric.py
ckptguard/policies/: __init__.py  audit_policy.py
ckptguard/readers/: __init__.py  safetensors_reader.py
ckptguard/reports/: __init__.py  html_report.py  json_report.py  output.py
ckptguard/reports/templates/: report.html.j2
ckptguard/stats/: __init__.py  diff_stats.py  tensor_stats.py
ckptguard/storage/: __init__.py  cache_db.py
tests/: conftest.py  package_smoke.py  synthetic_checkpoints.py  test_cache.py  test_cli.py  test_diff_audit.py  test_dtypes.py  test_output_safety.py  test_stats.py  test_synthetic_smoke.py
